--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "functions": {
+    "backend/index.js": {
+      "maxDuration": 30
+    }
+  },
   "builds": [
     {
       "src": "backend/index.js",
