🚀 Configurar scripts de build para deployment en Vercel

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "vite-react-typescript-starter",
+  "name": "enerpay",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "axios": "^1.10.0",
