--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,25 @@
 {
-  "version": 2,
-  "functions": {
-    "backend/index.js": {
-      "maxDuration": 30
-    }
-  },
   "builds": [
     {
       "src": "backend/index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
       "dest": "/backend/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/dist/$1"
     }
-  ],
-  "env": {
-    "BITSO_APIKEY": "@bitso_apikey",
-    "BITSO_SECRET_APIKEY": "@bitso_secret_apikey"
-  }
+  ]
 } 
