--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.8",
+    "@reown/appkit-wallet-button": "^1.7.13",
     "axios": "^1.10.0",
     "crypto": "^1.0.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.31.7",
+    "wagmi": "^2.15.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
